Adapt TestDataGeneration to be country aware